feat: first demo (缓慢学习中😴)

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -57,12 +57,14 @@ set(SOURCES
     src/app/app.cpp
     src/utils/logger.cpp
     src/utils/string_utils.cpp
+    src/controllers/testCtrl.cpp
 )
 
 set(HEADERS
     src/app/app.hpp
     src/utils/logger.hpp
     src/utils/string_utils.hpp
+    src/controllers/testCtrl.hpp
 )
 
 # ============================================================================
