--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2.10.1",
     "axios": "^1.13.2",
     "vue": "^3.5.25"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.10.0",
     "@vitejs/plugin-vue": "^6.0.2",
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5"
